# ScaleRunner-Exp

./: .gitignore  LICENSE  OVERVIEW.md  README.md  convert.py  evaluation.ipynb  experiments.yml  requirements.txt
develop/graphanalysis/: CMakeLists.txt  main.cpp
develop/graphtool/: CMakeLists.txt  graphtool.cpp
develop/io_benchmark/: CMakeLists.txt  io_benchmark_main.cpp  mpi_helper.h
develop/kk_benchmark/: CMakeLists.txt  experiments.h  graph_io.h  helpers.cpp  helpers.h  main.cpp
develop/sr_benchmark/: CMakeLists.txt  experiments.cpp  experiments.h  main.cpp
instances/: README.md
overview/: scalerunner_exp_overview.tex
